[Aryan] ADD: Changed swagger implementation and added sub model again with some changes
